tests/paczka1/fuzzy1/37612101.err
Error in line 1: hgKO5qbw A49 21,4
Error in line 2: hgKO5qbw A989 74,8
Error in line 6: tKAev A418 64,1
Error in line 20: tKAev A989 -2,7
Error in line 19: BdBat A418 56,9
Error in line 24: UqI22 A49 95,3
Error in line 7: tKAev A989 32,5
Error in line 33: tKAev A49 67,6
Error in line 22: BdBat A989 25,3
Error in line 36: BdBat A418 68,2
Error in line 23: oiShjXn A107 9,3
